--- a/collaborative/src/index.html
+++ b/collaborative/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Simple TypeScript Recipe Book App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- CSS included in script.ts. -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Lato|Pacifico|Lobster|Open+Sans"
       rel="stylesheet"
@@ -13,7 +14,6 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
